<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/postFoundTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_found"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postFoundReportTitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundTitle"
        tools:text="Title: " />

    <EditText
        android:id="@+id/postFoundReportTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_found_title"
        app:layout_constraintBottom_toBottomOf="@+id/postFoundReportTitleHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postFoundReportTitleHeader"
        app:layout_constraintTop_toTopOf="@+id/postFoundReportTitleHeader" />

    <TextView
        android:id="@+id/postFoundDateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/date_found"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundReportTitle" />

    <TextView
        android:id="@+id/postFoundDateFound"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:text="@string/no_date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="@+id/pickDateFoundButton"
        app:layout_constraintTop_toBottomOf="@+id/pickDateFoundButton" />

    <Button
        android:id="@+id/pickDateFoundButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/getFoundLocationButton"
        app:layout_constraintTop_toTopOf="@+id/postFoundDateHeader" />

    <TextView
        android:id="@+id/locationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundDateFound"
        tools:text="Location" />

    <Button
        android:id="@+id/getFoundLocationButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_location"
        app:layout_constraintBottom_toBottomOf="@+id/locationHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postFoundDateHeader"
        app:layout_constraintTop_toTopOf="@+id/locationHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/postFoundCoordinatesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/coordinates"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getFoundLocationButton"
        tools:text="Coordinates:" />

    <TextView
        android:id="@+id/postFoundCoordinates"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_coordinates"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/getFoundLocationButton"
        app:layout_constraintTop_toTopOf="@+id/postFoundCoordinatesHeader" />

    <TextView
        android:id="@+id/postFoundAddressHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundCoordinates" />

    <TextView
        android:id="@+id/postFoundAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/no_address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/postFoundCoordinates"
        app:layout_constraintTop_toTopOf="@+id/postFoundAddressHeader" />

    <TextView
        android:id="@+id/postFoundReportDescriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundAddress"
        tools:text="Description:" />

    <EditText
        android:id="@+id/postFoundReportDescription"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/description_filler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundReportDescriptionHeader" />

    <Button
        android:id="@+id/submitFound"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/new_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundReportDescription"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cancelFound"
        android:layout_width="102dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/new_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFoundReportDescription"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>